azure/jumpbox/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "virtualMachines_jumpbox_name": {
            "defaultValue": "jumpbox",
            "type": "String"
        },
        "networkInterfaces_jumpbox726_name": {
            "defaultValue": "jumpbox726",
            "type": "String"
        },
        "publicIPAddresses_jumpbox_ip_name": {
            "defaultValue": "jumpbox-ip",
            "type": "String"
        },
        "virtualNetworks_mrcooper_vnet_name": {
            "defaultValue": "mrcooper-vnet",
            "type": "String"
        },
        "storageAccounts_mrcooperdiag626_name": {
            "defaultValue": "mrcooperdiag626",
            "type": "String"
        },
        "networkSecurityGroups_jumpbox_nsg_name": {
            "defaultValue": "jumpbox-nsg",
            "type": "String"
        },
        "schedules_shutdown_computevm_jumpbox_name": {
            "defaultValue": "shutdown-computevm-jumpbox",
            "type": "String"
        },
        "subnets_default_name": {
            "defaultValue": "default",
            "type": "String"
        },
        "securityRules_default_allow_ssh_name": {
            "defaultValue": "default-allow-ssh",
            "type": "String"
        },
        "virtualMachines_jumpbox_id": {
            "defaultValue": "/subscriptions/e26c08ae-eb68-4000-94b3-96b9b37da1fc/resourceGroups/mrcooper/providers/Microsoft.Compute/disks/jumpbox_OsDisk_1_a08e36135c1b4616a5d42a3bb9c667f9",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "comments": "Generalized from resource: '/subscriptions/e26c08ae-eb68-4000-94b3-96b9b37da1fc/resourceGroups/mrcooper/providers/Microsoft.Compute/virtualMachines/jumpbox'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_jumpbox_name')]",
            "apiVersion": "2017-03-30",
            "location": "centralus",
            "scale": null,
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_D2s_v3"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "credativ",
                        "offer": "Debian",
                        "sku": "9",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[concat(parameters('virtualMachines_jumpbox_name'),'_OsDisk_1_a08e36135c1b4616a5d42a3bb9c667f9')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType": "Premium_LRS"
                        },
                        "diskSizeGB": 30
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_jumpbox_name')]",
                    "adminUsername": "kearl",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": true,
                        "ssh": {
                            "publicKeys": [
                                {
                                    "path": "/home/kearl/.ssh/authorized_keys",
                                    "keyData": "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDk7yn9YgBZGt1IUGUfPgOxS1bHd4Fr5+/D3xcvJk2PbaX9/Ei3jlMDuqb+yWMdsiRnG1qB8zA/7tkJX0+KI8SdqUoTa0HdFqWoAeYOALmrLsiHPUMj1RiNcq0w6TCBfgq/czgUss0qOSaZmnSVGsK7A5dbFo0Q4kBMiXatPAhi/xEIzLNIR1ahFuBZkjqdiullVHOUsqM9zv1hvWuF/Zw4MSyoUzaiyQjfmKMgxcDZ4sySqPjlSLY2Zp+Wki6m/vsNj2vrSkIDnRYqoggm7UVm2msqzP2D36uNwK1/PZWY1u1NtcNqEYCG5Qo6iP/gI+SPrCPrYpguFQe2F/Z3b1Pp"
                                }
                            ]
                        }
                    },
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_jumpbox726_name'))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[concat('https', '://', parameters('storageAccounts_mrcooperdiag626_name'), '.blob.core.windows.net', '/')]"
                    }
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_jumpbox726_name'))]",
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_mrcooperdiag626_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/e26c08ae-eb68-4000-94b3-96b9b37da1fc/resourcegroups/mrcooper/providers/microsoft.devtestlab/schedules/shutdown-computevm-jumpbox'.",
            "type": "microsoft.devtestlab/schedules",
            "name": "[parameters('schedules_shutdown_computevm_jumpbox_name')]",
            "apiVersion": "2016-05-15",
            "location": "centralus",
            "scale": null,
            "properties": {
                "status": "Enabled",
                "taskType": "ComputeVmShutdownTask",
                "dailyRecurrence": {
                    "time": "1900"
                },
                "timeZoneId": "UTC",
                "notificationSettings": {
                    "status": "Disabled",
                    "timeInMinutes": 30
                },
                "targetResourceId": "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_jumpbox_name'))]",
                "provisioningState": "Succeeded",
                "uniqueIdentifier": "4a85bcfe-fee6-44f2-9074-5947045a8ae6"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_jumpbox_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/e26c08ae-eb68-4000-94b3-96b9b37da1fc/resourceGroups/mrcooper/providers/Microsoft.Network/networkInterfaces/jumpbox726'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_jumpbox726_name')]",
            "apiVersion": "2017-06-01",
            "location": "centralus",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "55570d20-aedd-4368-b54f-d7902abe7fbe",
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "etag": "W/\"da94b3c4-a888-44e3-b979-cc8c84b52dc3\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.0.0.4",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_jumpbox_ip_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_mrcooper_vnet_name'), parameters('subnets_default_name'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": [],
                    "internalDomainNameSuffix": "nfkijfj11o2urbddigjobm3mab.gx.internal.cloudapp.net"
                },
                "macAddress": "00-0D-3A-94-87-78",
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_jumpbox_nsg_name'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_jumpbox_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_mrcooper_vnet_name'), parameters('subnets_default_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_jumpbox_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/e26c08ae-eb68-4000-94b3-96b9b37da1fc/resourceGroups/mrcooper/providers/Microsoft.Network/networkSecurityGroups/jumpbox-nsg'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_jumpbox_nsg_name')]",
            "apiVersion": "2017-06-01",
            "location": "centralus",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "9eb392cc-a41b-44c8-8e4e-c640db79c882",
                "securityRules": [
                    {
                        "name": "default-allow-ssh",
                        "etag": "W/\"fc90db41-dd14-42c6-b517-a60b10f8719d\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "etag": "W/\"fc90db41-dd14-42c6-b517-a60b10f8719d\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "etag": "W/\"fc90db41-dd14-42c6-b517-a60b10f8719d\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "etag": "W/\"fc90db41-dd14-42c6-b517-a60b10f8719d\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOutBound",
                        "etag": "W/\"fc90db41-dd14-42c6-b517-a60b10f8719d\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOutBound",
                        "etag": "W/\"fc90db41-dd14-42c6-b517-a60b10f8719d\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "etag": "W/\"fc90db41-dd14-42c6-b517-a60b10f8719d\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/e26c08ae-eb68-4000-94b3-96b9b37da1fc/resourceGroups/mrcooper/providers/Microsoft.Network/publicIPAddresses/jumpbox-ip'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('publicIPAddresses_jumpbox_ip_name')]",
            "apiVersion": "2017-06-01",
            "location": "centralus",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "f3d02512-e213-4fe9-8f35-3913548592d5",
                "ipAddress": "52.173.33.232",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/e26c08ae-eb68-4000-94b3-96b9b37da1fc/resourceGroups/mrcooper/providers/Microsoft.Network/virtualNetworks/mrcooper-vnet'.",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworks_mrcooper_vnet_name')]",
            "apiVersion": "2017-06-01",
            "location": "centralus",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "95845469-db3b-48b9-8463-4192e0b3ac01",
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.0.0/24"
                    ]
                },
                "subnets": [
                    {
                        "name": "default",
                        "etag": "W/\"808379ae-e7fd-4f3b-87e0-59503b1be4c4\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "addressPrefix": "10.0.0.0/24"
                        }
                    }
                ],
                "virtualNetworkPeerings": []
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/e26c08ae-eb68-4000-94b3-96b9b37da1fc/resourceGroups/mrcooper/providers/Microsoft.Storage/storageAccounts/mrcooperdiag626'.",
            "type": "Microsoft.Storage/storageAccounts",
            "sku": {
                "name": "Standard_LRS",
                "tier": "Standard"
            },
            "kind": "Storage",
            "name": "[parameters('storageAccounts_mrcooperdiag626_name')]",
            "apiVersion": "2017-06-01",
            "location": "centralus",
            "scale": null,
            "properties": {
                "encryption": {
                    "services": {
                        "file": {
                            "enabled": true
                        },
                        "blob": {
                            "enabled": true
                        }
                    },
                    "keySource": "Microsoft.Storage"
                }
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/e26c08ae-eb68-4000-94b3-96b9b37da1fc/resourceGroups/mrcooper/providers/Microsoft.Network/networkSecurityGroups/jumpbox-nsg/securityRules/default-allow-ssh'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_jumpbox_nsg_name'), '/', parameters('securityRules_default_allow_ssh_name'))]",
            "apiVersion": "2017-06-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1000,
                "direction": "Inbound",
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_jumpbox_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/e26c08ae-eb68-4000-94b3-96b9b37da1fc/resourceGroups/mrcooper/providers/Microsoft.Network/virtualNetworks/mrcooper-vnet/subnets/default'.",
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "name": "[concat(parameters('virtualNetworks_mrcooper_vnet_name'), '/', parameters('subnets_default_name'))]",
            "apiVersion": "2017-06-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.0.0/24"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_mrcooper_vnet_name'))]"
            ]
        }
    ]
}
